--- a/notebooks/tokenizer.ipynb
+++ b/notebooks/tokenizer.ipynb
@@ -118,16 +118,152 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dans un premier temps on peut transformer une chaine de caractère en "
+    "On peut directement obtenir la liste des bytes :"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[66, 111, 110, 106, 111, 117, 114, 32, 240, 159, 145, 139]\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"Bonjour 👋\"\n",
+    "text_ids = list(text.encode())\n",
+    "\n",
+    "print(text_ids)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Implémentation de la tokenization Byte Pair Encoding (BPE)\n",
+    "\n",
+    "[L'algorithme BPE ](https://en.wikipedia.org/wiki/Byte_pair_encoding) fonctionne en fusionnant sucessivement la paire\n",
+    "d'octets la plus fréquente.\n",
+    "\n",
+    "Dans un premier temps, on va donc implémenter une fonction qui compte les nombres d'apparition des paires d'octet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = \"Bonjour, Hello, こんにちは, 👋\""
+    "text = \"\"\"Une demi-heure plus tard, Harry, qui n'en croyait pas sa chance, était assis à l'arrière de la voiture des\n",
+    "Dursley, en compagnie de Piers et Dudley. Pour la première fois de sa vie, il allait visiter le zoo.\"\"\"\n",
+    "\n",
+    "text_ids = list(text.encode())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[((101, 32), 10), ((32, 100), 5), ((100, 101), 5)]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "\n",
+    "def count_pairs(ids: list[int]):\n",
+    "    return Counter(((o1, o2) for o1, o2 in zip(ids, ids[1:])))\n",
+    "\n",
+    "\n",
+    "stats = count_pairs(text_ids)\n",
+    "stats.most_common(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((101, 32), 10, 'e ')"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(((o1, o2), nb),) = stats.most_common(1)\n",
+    "\n",
+    "(o1, o2), nb, bytes([o1, o2]).decode(\"utf-8\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ensuite on va écfire une fonction qui fusionne une paire en remplaçant les octets par une nouvel id."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 1, 4, 3]"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def merge(ids: list[int], pair: tuple[int, int], new_id: int):\n",
+    "    new_ids = []\n",
+    "    i = 0\n",
+    "    while i < len(ids):\n",
+    "        if i < (len(ids) - 1) and (ids[i], ids[i + 1]) == pair:\n",
+    "            new_ids.append(new_id)\n",
+    "            i += 2\n",
+    "        else:\n",
+    "            new_ids.append(ids[i])\n",
+    "            i += 1\n",
+    "    return new_ids\n",
+    "\n",
+    "\n",
+    "merge([1, 2, 3, 1, 2, 3, 3], (2, 3), 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tests import test_merge\n",
+    "\n",
+    "test_merge(merge)"
    ]
   }
  ],
