--- a/notebooks/atelier.ipynb
+++ b/notebooks/atelier.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Atelier tokenizer\n",
     "\n",
-    "Dans cet atelier nous alons constuire un tokenizer utilisant l'algorithme Byte Pair Encoding (BPE) tel que ceux utilisés\n",
+    "Dans cet atelier, nous allons constuire un tokenizer utilisant l'algorithme Byte Pair Encoding (BPE) tel que ceux utilisés\n",
     "dans ChatGPT.\n"
    ]
   },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -144,12 +144,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Implémentation de la tokenization Byte Pair Encoding (BPE)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Téléchargement du code de test"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget https://raw.githubusercontent.com/h4c5/pdt2025/refs/heads/main/notebooks/tests.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cette fonction permettra de tester les différentes fonctions de l'atelier\n",
+    "from tests import test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -164,16 +197,6 @@
     "text = \"Bonjour 👋\"\n",
     "text_ids = list(text.encode())\n",
     "print(text_ids)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Cette fonction permettra de tester les différentes fonctions de l'atelier\n",
-    "from tests import test"
    ]
   },
   {
@@ -213,13 +236,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from collections import Counter\n",
+    "\n",
+    "\n",
     "def get_top_pair(ids: list[int]) -> tuple[tuple[int, int], int] | None:\n",
-    "    \"\"\"Récupération de la paire de tokens la plus fréquente.\"\"\""
+    "    \"\"\"Récupération de la paire de tokens la plus fréquente.\"\"\"\n",
+    "\n",
+    "    # if len(ids) <= 1:\n",
+    "    #     return None\n",
+    "\n",
+    "    # counts = Counter(zip(ids, ids[1:]))\n",
+    "\n",
+    "    # return counts.most_common(1)[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +261,7 @@
        "((1, 2), 2)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +315,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ensuite on va écfire une fonction qui fusionne une paire en remplaçant les octets par une nouvel id."
+    "Ensuite, on va écrire une fonction qui fusionne une paire en remplaçant les octets par une nouvel id."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**A IMPLEMENTER :**"
    ]
   },
   {
@@ -293,10 +333,10 @@
     {
      "data": {
       "text/plain": [
-       "[1, 4, 1, 4, 3]"
+       "[]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,6 +344,23 @@
    "source": [
     "def merge(ids: list[int], pair: tuple[int, int], new_id: int) -> list[int]:\n",
     "    \"\"\"Fusion d'une pair de tokens.\"\"\"\n",
+    "\n",
+    "    new_ids = []\n",
+    "    i = 0\n",
+    "\n",
+    "    while i < len(ids):\n",
+    "        # >>> A IMPLEMENTER <<<\n",
+    "\n",
+    "        # Si la paire (token_i, token_i+1) est égle à la paire à fusionner, \n",
+    "        # ajouter le nouveau token new_id dans new_ids\n",
+    "        if False:\n",
+    "            ...\n",
+    "\n",
+    "        # Sinon ajouter le token_i à dans new_ids et passer au suivant\n",
+    "        else:\n",
+    "            i += 1\n",
+    "\n",
+    "    return new_ids\n",
     "\n",
     "\n",
     "merge([1, 2, 3, 1, 2, 3, 3], (2, 3), 4)"
@@ -335,29 +392,65 @@
    "source": [
     "### Entrainement du tokenizer\n",
     "\n",
-    "Les fonctions `get_top_pair` et `merge` peuvent maintenant être utilisée pour entrainer un tokenizer BPE.\n",
+    "Les fonctions `get_top_pair` et `merge` peuvent maintenant être utilisées pour entrainer un tokenizer BPE.\n",
     "\n",
     "Ecrivons une fonction `train_bpe_tokenizer` \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**A IMPLEMENTER :**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Nombre de tokens initial : 211\n",
-      "Nombre de tokens final   : 165\n",
-      "Ratio de compression     : 78%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def train_bpe_tokenizer(text: str, vocab_size: int) -> dict[tuple[int, int], int]:\n",
     "    \"\"\"Entrainement d'un tokenizer BPE.\"\"\"\n",
+    "\n",
+    "    if vocab_size < 256:\n",
+    "        raise ValueError(\n",
+    "            \"Il doit y avoir au moins 256 éléments dans le vocabulaire : \"\n",
+    "            \"les 256 octets possibles.\"\n",
+    "        )\n",
+    "    \n",
+    "    # Tokenization initiale\n",
+    "    text_ids = list(text.encode())\n",
+    "\n",
+    "    # Le nombre de fusions à réaliser est égale à la taille du vocabulaire moins les\n",
+    "    # 256 éléments de départ\n",
+    "    n_merges = vocab_size - 256\n",
+    "\n",
+    "    # Initialisation du dictionnaire merges qui contiendra les fusions et leurs indices\n",
+    "    merges = {}\n",
+    "\n",
+    "    for i in range(n_merges):\n",
+    "\n",
+    "        # S'il n'y a plus qu'un token, on ne peut plus fusionner\n",
+    "        if len(text_ids) < 2:\n",
+    "            break\n",
+    "\n",
+    "        # Les nouveaux tokens commencent à 256\n",
+    "        new_id = 256 + i\n",
+    "\n",
+    "\n",
+    "        # >>> A IMPLEMENTER <<<\n",
+    "        # Récupérer la paire la plus fréquente\n",
+    "        # pair = ...\n",
+    "\n",
+    "        # Ajouter la paire au dictionnaire de fusions\n",
+    "        merges[pair] = new_id\n",
+    "\n",
+    "        # >>> A IMPLEMENTER <<<\n",
+    "        # Fusionner la paire\n",
+    "        # text_ids = ...\n",
+    "\n",
+    "    return merges\n",
     "\n",
     "\n",
     "merges = train_bpe_tokenizer(text, 266)"
@@ -394,7 +487,14 @@
    "source": [
     "### Encodage (tokenisation)\n",
     "\n",
-    "A présent on peut tokenizer une chaine de caractère"
+    "A présent, on peut tokenizer une chaine de caractères"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**A IMPLEMENTER :**"
    ]
   },
   {
@@ -414,6 +514,31 @@
    "source": [
     "def encode(text: str, merges: dict[tuple[int, int], int]) -> list[int]:\n",
     "    \"\"\"Tokenization d'une chaine de caractère à partir du dictionnaire merges.\"\"\"\n",
+    "\n",
+    "    text_ids = list(text.encode())\n",
+    "\n",
+    "    while len(text_ids) >= 2:\n",
+    "\n",
+    "        # On récupère la paire dont l'idenfiant est le plus bas dans merges.\n",
+    "        # S'il n'y a aucune paire de tokens qui est présente dans text_ids, la paire\n",
+    "        # renvoyée est la première paire\n",
+    "        pair = min(\n",
+    "            zip(text_ids, text_ids[1:]), \n",
+    "\n",
+    "            # >>> A IMPLEMENTER <<<\n",
+    "            # On souhaite récupérer la paire de merges dont l'id est le plus petit\n",
+    "            key=... \n",
+    "        )\n",
+    "\n",
+    "        # Dans le cas où la paire n'est pas dans merge, il n'y a plus rien à merger\n",
+    "        if pair not in merges:\n",
+    "            break\n",
+    "        \n",
+    "        # >>> A IMPLEMENTER <<<\n",
+    "        # Fusionner la paire\n",
+    "        # text_ids = ...\n",
+    "\n",
+    "    return text_ids\n",
     "\n",
     "\n",
     "ids = encode(text, merges)\n",
@@ -446,27 +571,57 @@
    "source": [
     "### Décodage\n",
     "\n",
-    "Maintenant on souhaite décoder une séquence de tokens.\n",
+    "Maintenant, on souhaite décoder une séquence de tokens.\n",
     "\n",
-    "Dans un premier temps, on va construire un vocabulaire qui à chaque token, va associé les octets correspondant."
+    "Dans un premier temps, on va construire un vocabulaire qui à chaque token, va associer les octets correspondant : \n",
+    "\n",
+    "```python\n",
+    "vocab = {\n",
+    "    0 : bytes([0]),\n",
+    "    1 : bytes([1]),\n",
+    "    2 : bytes([2]),\n",
+    "    # ...\n",
+    "    1000 : bytes([1, 233, 122, 123, 3])\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "Ce vocabulaire nous permettra de facilement obtenir la liste des octets à partir d'une liste de tokens"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**A IMPLEMENTER :**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0: b'\\x00', 1: b'\\x01', 2: b'\\x02', 3: b'\\x03', 4: b'\\x04', 5: b'\\x05', 6: b'\\x06', 7: b'\\x07', 8: b'\\x08', 9: b'\\t', 10: b'\\n', 11: b'\\x0b', 12: b'\\x0c', 13: b'\\r', 14: b'\\x0e', 15: b'\\x0f', 16: b'\\x10', 17: b'\\x11', 18: b'\\x12', 19: b'\\x13', 20: b'\\x14', 21: b'\\x15', 22: b'\\x16', 23: b'\\x17', 24: b'\\x18', 25: b'\\x19', 26: b'\\x1a', 27: b'\\x1b', 28: b'\\x1c', 29: b'\\x1d', 30: b'\\x1e', 31: b'\\x1f', 32: b' ', 33: b'!', 34: b'\"', 35: b'#', 36: b'$', 37: b'%', 38: b'&', 39: b\"'\", 40: b'(', 41: b')', 42: b'*', 43: b'+', 44: b',', 45: b'-', 46: b'.', 47: b'/', 48: b'0', 49: b'1', 50: b'2', 51: b'3', 52: b'4', 53: b'5', 54: b'6', 55: b'7', 56: b'8', 57: b'9', 58: b':', 59: b';', 60: b'<', 61: b'=', 62: b'>', 63: b'?', 64: b'@', 65: b'A', 66: b'B', 67: b'C', 68: b'D', 69: b'E', 70: b'F', 71: b'G', 72: b'H', 73: b'I', 74: b'J', 75: b'K', 76: b'L', 77: b'M', 78: b'N', 79: b'O', 80: b'P', 81: b'Q', 82: b'R', 83: b'S', 84: b'T', 85: b'U', 86: b'V', 87: b'W', 88: b'X', 89: b'Y', 90: b'Z', 91: b'[', 92: b'\\\\', 93: b']', 94: b'^', 95: b'_', 96: b'`', 97: b'a', 98: b'b', 99: b'c', 100: b'd', 101: b'e', 102: b'f', 103: b'g', 104: b'h', 105: b'i', 106: b'j', 107: b'k', 108: b'l', 109: b'm', 110: b'n', 111: b'o', 112: b'p', 113: b'q', 114: b'r', 115: b's', 116: b't', 117: b'u', 118: b'v', 119: b'w', 120: b'x', 121: b'y', 122: b'z', 123: b'{', 124: b'|', 125: b'}', 126: b'~', 127: b'\\x7f', 128: b'\\x80', 129: b'\\x81', 130: b'\\x82', 131: b'\\x83', 132: b'\\x84', 133: b'\\x85', 134: b'\\x86', 135: b'\\x87', 136: b'\\x88', 137: b'\\x89', 138: b'\\x8a', 139: b'\\x8b', 140: b'\\x8c', 141: b'\\x8d', 142: b'\\x8e', 143: b'\\x8f', 144: b'\\x90', 145: b'\\x91', 146: b'\\x92', 147: b'\\x93', 148: b'\\x94', 149: b'\\x95', 150: b'\\x96', 151: b'\\x97', 152: b'\\x98', 153: b'\\x99', 154: b'\\x9a', 155: b'\\x9b', 156: b'\\x9c', 157: b'\\x9d', 158: b'\\x9e', 159: b'\\x9f', 160: b'\\xa0', 161: b'\\xa1', 162: b'\\xa2', 163: b'\\xa3', 164: b'\\xa4', 165: b'\\xa5', 166: b'\\xa6', 167: b'\\xa7', 168: b'\\xa8', 169: b'\\xa9', 170: b'\\xaa', 171: b'\\xab', 172: b'\\xac', 173: b'\\xad', 174: b'\\xae', 175: b'\\xaf', 176: b'\\xb0', 177: b'\\xb1', 178: b'\\xb2', 179: b'\\xb3', 180: b'\\xb4', 181: b'\\xb5', 182: b'\\xb6', 183: b'\\xb7', 184: b'\\xb8', 185: b'\\xb9', 186: b'\\xba', 187: b'\\xbb', 188: b'\\xbc', 189: b'\\xbd', 190: b'\\xbe', 191: b'\\xbf', 192: b'\\xc0', 193: b'\\xc1', 194: b'\\xc2', 195: b'\\xc3', 196: b'\\xc4', 197: b'\\xc5', 198: b'\\xc6', 199: b'\\xc7', 200: b'\\xc8', 201: b'\\xc9', 202: b'\\xca', 203: b'\\xcb', 204: b'\\xcc', 205: b'\\xcd', 206: b'\\xce', 207: b'\\xcf', 208: b'\\xd0', 209: b'\\xd1', 210: b'\\xd2', 211: b'\\xd3', 212: b'\\xd4', 213: b'\\xd5', 214: b'\\xd6', 215: b'\\xd7', 216: b'\\xd8', 217: b'\\xd9', 218: b'\\xda', 219: b'\\xdb', 220: b'\\xdc', 221: b'\\xdd', 222: b'\\xde', 223: b'\\xdf', 224: b'\\xe0', 225: b'\\xe1', 226: b'\\xe2', 227: b'\\xe3', 228: b'\\xe4', 229: b'\\xe5', 230: b'\\xe6', 231: b'\\xe7', 232: b'\\xe8', 233: b'\\xe9', 234: b'\\xea', 235: b'\\xeb', 236: b'\\xec', 237: b'\\xed', 238: b'\\xee', 239: b'\\xef', 240: b'\\xf0', 241: b'\\xf1', 242: b'\\xf2', 243: b'\\xf3', 244: b'\\xf4', 245: b'\\xf5', 246: b'\\xf6', 247: b'\\xf7', 248: b'\\xf8', 249: b'\\xf9', 250: b'\\xfa', 251: b'\\xfb', 252: b'\\xfc', 253: b'\\xfd', 254: b'\\xfe', 255: b'\\xff', 256: b'bo', 257: b'bon', 258: b'bonj', 259: b'bonjo', 260: b'bonjou', 261: b'bonjour'}\n"
+      "{0: b'\\x00', 1: b'\\x01', 2: b'\\x02', 3: b'\\x03', 4: b'\\x04', 5: b'\\x05', 6: b'\\x06', 7: b'\\x07', 8: b'\\x08', 9: b'\\t', 10: b'\\n', 11: b'\\x0b', 12: b'\\x0c', 13: b'\\r', 14: b'\\x0e', 15: b'\\x0f', 16: b'\\x10', 17: b'\\x11', 18: b'\\x12', 19: b'\\x13', 20: b'\\x14', 21: b'\\x15', 22: b'\\x16', 23: b'\\x17', 24: b'\\x18', 25: b'\\x19', 26: b'\\x1a', 27: b'\\x1b', 28: b'\\x1c', 29: b'\\x1d', 30: b'\\x1e', 31: b'\\x1f', 32: b' ', 33: b'!', 34: b'\"', 35: b'#', 36: b'$', 37: b'%', 38: b'&', 39: b\"'\", 40: b'(', 41: b')', 42: b'*', 43: b'+', 44: b',', 45: b'-', 46: b'.', 47: b'/', 48: b'0', 49: b'1', 50: b'2', 51: b'3', 52: b'4', 53: b'5', 54: b'6', 55: b'7', 56: b'8', 57: b'9', 58: b':', 59: b';', 60: b'<', 61: b'=', 62: b'>', 63: b'?', 64: b'@', 65: b'A', 66: b'B', 67: b'C', 68: b'D', 69: b'E', 70: b'F', 71: b'G', 72: b'H', 73: b'I', 74: b'J', 75: b'K', 76: b'L', 77: b'M', 78: b'N', 79: b'O', 80: b'P', 81: b'Q', 82: b'R', 83: b'S', 84: b'T', 85: b'U', 86: b'V', 87: b'W', 88: b'X', 89: b'Y', 90: b'Z', 91: b'[', 92: b'\\\\', 93: b']', 94: b'^', 95: b'_', 96: b'`', 97: b'a', 98: b'b', 99: b'c', 100: b'd', 101: b'e', 102: b'f', 103: b'g', 104: b'h', 105: b'i', 106: b'j', 107: b'k', 108: b'l', 109: b'm', 110: b'n', 111: b'o', 112: b'p', 113: b'q', 114: b'r', 115: b's', 116: b't', 117: b'u', 118: b'v', 119: b'w', 120: b'x', 121: b'y', 122: b'z', 123: b'{', 124: b'|', 125: b'}', 126: b'~', 127: b'\\x7f', 128: b'\\x80', 129: b'\\x81', 130: b'\\x82', 131: b'\\x83', 132: b'\\x84', 133: b'\\x85', 134: b'\\x86', 135: b'\\x87', 136: b'\\x88', 137: b'\\x89', 138: b'\\x8a', 139: b'\\x8b', 140: b'\\x8c', 141: b'\\x8d', 142: b'\\x8e', 143: b'\\x8f', 144: b'\\x90', 145: b'\\x91', 146: b'\\x92', 147: b'\\x93', 148: b'\\x94', 149: b'\\x95', 150: b'\\x96', 151: b'\\x97', 152: b'\\x98', 153: b'\\x99', 154: b'\\x9a', 155: b'\\x9b', 156: b'\\x9c', 157: b'\\x9d', 158: b'\\x9e', 159: b'\\x9f', 160: b'\\xa0', 161: b'\\xa1', 162: b'\\xa2', 163: b'\\xa3', 164: b'\\xa4', 165: b'\\xa5', 166: b'\\xa6', 167: b'\\xa7', 168: b'\\xa8', 169: b'\\xa9', 170: b'\\xaa', 171: b'\\xab', 172: b'\\xac', 173: b'\\xad', 174: b'\\xae', 175: b'\\xaf', 176: b'\\xb0', 177: b'\\xb1', 178: b'\\xb2', 179: b'\\xb3', 180: b'\\xb4', 181: b'\\xb5', 182: b'\\xb6', 183: b'\\xb7', 184: b'\\xb8', 185: b'\\xb9', 186: b'\\xba', 187: b'\\xbb', 188: b'\\xbc', 189: b'\\xbd', 190: b'\\xbe', 191: b'\\xbf', 192: b'\\xc0', 193: b'\\xc1', 194: b'\\xc2', 195: b'\\xc3', 196: b'\\xc4', 197: b'\\xc5', 198: b'\\xc6', 199: b'\\xc7', 200: b'\\xc8', 201: b'\\xc9', 202: b'\\xca', 203: b'\\xcb', 204: b'\\xcc', 205: b'\\xcd', 206: b'\\xce', 207: b'\\xcf', 208: b'\\xd0', 209: b'\\xd1', 210: b'\\xd2', 211: b'\\xd3', 212: b'\\xd4', 213: b'\\xd5', 214: b'\\xd6', 215: b'\\xd7', 216: b'\\xd8', 217: b'\\xd9', 218: b'\\xda', 219: b'\\xdb', 220: b'\\xdc', 221: b'\\xdd', 222: b'\\xde', 223: b'\\xdf', 224: b'\\xe0', 225: b'\\xe1', 226: b'\\xe2', 227: b'\\xe3', 228: b'\\xe4', 229: b'\\xe5', 230: b'\\xe6', 231: b'\\xe7', 232: b'\\xe8', 233: b'\\xe9', 234: b'\\xea', 235: b'\\xeb', 236: b'\\xec', 237: b'\\xed', 238: b'\\xee', 239: b'\\xef', 240: b'\\xf0', 241: b'\\xf1', 242: b'\\xf2', 243: b'\\xf3', 244: b'\\xf4', 245: b'\\xf5', 246: b'\\xf6', 247: b'\\xf7', 248: b'\\xf8', 249: b'\\xf9', 250: b'\\xfa', 251: b'\\xfb', 252: b'\\xfc', 253: b'\\xfd', 254: b'\\xfe', 255: b'\\xff', 265: Ellipsis}\n"
      ]
     }
    ],
    "source": [
     "def construct_vocab(merges: dict[tuple[int, int], int]) -> dict[int, bytes]:\n",
     "    \"\"\"Construction d'un vocabulaire à partir d'un dictionnaire merges.\"\"\"\n",
+    "\n",
+    "    vocab = {idx: bytes([idx]) for idx in range(256)}\n",
+    "\n",
+    "    # >>> A IMPLEMENTER <<<\n",
+    "    for (t1, t2), idx in merges.items():\n",
+    "\n",
+    "        # La séquence de bytes du token idx est la concaténation des séquences des \n",
+    "        # tokens t1 et t2\n",
+    "        vocab[idx] = ...\n",
+    "\n",
+    "    return vocab\n",
     "\n",
     "\n",
     "vocab = construct_vocab(merges)\n",
@@ -508,6 +663,9 @@
    "source": [
     "def decode(tokens: list[int], vocab: dict[int, bytes]) -> str:\n",
     "    \"\"\"Décodage d'une séquence de tokens\"\"\"\n",
+    "    \n",
+    "    # >>> A IMPLEMENTER <<<\n",
+    "    # Utiliser b\"\".join() pour joindre des bytes et la fonction\n",
     "\n",
     "\n",
     "print(decode(ids, vocab))"
@@ -606,6 +764,13 @@
    "metadata": {},
    "source": [
     "On peut réécrire les fonctions `count_pairs` et `train_bpe_tokenizer` pour les faire fonctionner sur des séquences de tokens :"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**A IMPLEMENTER :**"
    ]
   },
   {
