update first exo

--- a/notebooks/atelier.ipynb
+++ b/notebooks/atelier.ipynb
@@ -236,18 +236,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections import Counter\n",
-    "\n",
-    "\n",
     "def get_top_pair(ids: list[int]) -> tuple[tuple[int, int], int] | None:\n",
     "    \"\"\"Récupération de la paire de tokens la plus fréquente.\"\"\"\n",
     "\n",
-    "    # if len(ids) <= 1:\n",
-    "    #     return None\n",
+    "    if len(ids) < 2:\n",
+    "        return None\n",
     "\n",
-    "    # counts = Counter(zip(ids, ids[1:]))\n",
+    "    counts = {}\n",
     "\n",
-    "    # return counts.most_common(1)[0]"
+    "    for pair in zip(ids, ids[1:]):\n",
+    "        # >>> A IMPLEMENTER <<<\n",
+    "        ...\n",
+    "\n",
+    "    top_pair = ...\n",
+    "\n",
+    "    return top_pair, counts[top_pair]"
    ]
   },
   {
@@ -351,7 +354,7 @@
     "    while i < len(ids):\n",
     "        # >>> A IMPLEMENTER <<<\n",
     "\n",
-    "        # Si la paire (token_i, token_i+1) est égle à la paire à fusionner, \n",
+    "        # Si la paire (token_i, token_i+1) est égle à la paire à fusionner,\n",
     "        # ajouter le nouveau token new_id dans new_ids\n",
     "        if False:\n",
     "            ...\n",
@@ -418,7 +421,7 @@
     "            \"Il doit y avoir au moins 256 éléments dans le vocabulaire : \"\n",
     "            \"les 256 octets possibles.\"\n",
     "        )\n",
-    "    \n",
+    "\n",
     "    # Tokenization initiale\n",
     "    text_ids = list(text.encode())\n",
     "\n",
@@ -430,14 +433,12 @@
     "    merges = {}\n",
     "\n",
     "    for i in range(n_merges):\n",
-    "\n",
     "        # S'il n'y a plus qu'un token, on ne peut plus fusionner\n",
     "        if len(text_ids) < 2:\n",
     "            break\n",
     "\n",
     "        # Les nouveaux tokens commencent à 256\n",
     "        new_id = 256 + i\n",
-    "\n",
     "\n",
     "        # >>> A IMPLEMENTER <<<\n",
     "        # Récupérer la paire la plus fréquente\n",
@@ -518,22 +519,20 @@
     "    text_ids = list(text.encode())\n",
     "\n",
     "    while len(text_ids) >= 2:\n",
-    "\n",
     "        # On récupère la paire dont l'idenfiant est le plus bas dans merges.\n",
     "        # S'il n'y a aucune paire de tokens qui est présente dans text_ids, la paire\n",
     "        # renvoyée est la première paire\n",
     "        pair = min(\n",
-    "            zip(text_ids, text_ids[1:]), \n",
-    "\n",
+    "            zip(text_ids, text_ids[1:]),\n",
     "            # >>> A IMPLEMENTER <<<\n",
     "            # On souhaite récupérer la paire de merges dont l'id est le plus petit\n",
-    "            key=... \n",
+    "            key=...,\n",
     "        )\n",
     "\n",
     "        # Dans le cas où la paire n'est pas dans merge, il n'y a plus rien à merger\n",
     "        if pair not in merges:\n",
     "            break\n",
-    "        \n",
+    "\n",
     "        # >>> A IMPLEMENTER <<<\n",
     "        # Fusionner la paire\n",
     "        # text_ids = ...\n",
@@ -597,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -616,8 +615,7 @@
     "\n",
     "    # >>> A IMPLEMENTER <<<\n",
     "    for (t1, t2), idx in merges.items():\n",
-    "\n",
-    "        # La séquence de bytes du token idx est la concaténation des séquences des \n",
+    "        # La séquence de bytes du token idx est la concaténation des séquences des\n",
     "        # tokens t1 et t2\n",
     "        vocab[idx] = ...\n",
     "\n",
@@ -663,7 +661,7 @@
    "source": [
     "def decode(tokens: list[int], vocab: dict[int, bytes]) -> str:\n",
     "    \"\"\"Décodage d'une séquence de tokens\"\"\"\n",
-    "    \n",
+    "\n",
     "    # >>> A IMPLEMENTER <<<\n",
     "    # Utiliser b\"\".join() pour joindre des bytes et la fonction\n",
     "\n",
